feat: create array helper

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Default",
   "compilerOptions": {
+    "target": "ES5",
+    "module": "CommonJS",
+    "sourceMap": true,
     "paths": {},
     "baseUrl": ".",
     "composite": false,
